<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_book_coins">余额：</string>
    <string name="account_book_coins_unit">(淘书币)</string>
    <string name="account_commission">佣金收入(元)</string>
    <string name="account_commission_new">佣金收入(元)</string>
    <string name="account_duration">金币余额(个)</string>
    <string name="account_duration_new">金币余额(个)</string>
    <string name="account_error">账号异常</string>
    <string name="account_function">常用功能</string>
    <string name="account_head">头像</string>
    <string name="account_manage">账户管理</string>
    <string name="account_money">现金收入(元)</string>
    <string name="account_money_new">现金收入(元)</string>
    <string name="account_not_generated_retry">账号尚未生成完毕，请稍后重试</string>
    <string name="account_security">账号与安全</string>
    <string name="account_security_logout">注销账号</string>
    <string name="account_security_logout_desc">注销后的账号，相关信息会被清空且无法找回，是否确定注销？</string>
    <string name="account_setting">账号设置</string>
    <string name="account_switch">您的微信已注册，是否切换到该账号</string>
    <string name="account_switch_hint">注意：游客账号需绑定微信才能提现</string>
    <string name="account_teenager">青少年模式</string>
    <string name="account_uid">用户ID</string>
    <string name="account_withdraw">立即充值</string>
    <string name="activate_vip">开通会员</string>
    <string name="active_by_video">看视频解锁全部章节</string>
    <string name="active_by_video_duration">看视频继续阅读</string>
    <string name="active_vip">立即开通</string>
    <string name="ad_activity_name">玩游戏赚钱</string>
    <string name="ad_click_guide">点击减少广告</string>
    <string name="ad_for_empty">左滑翻下一页</string>
    <string name="ad_for_novel">广告是为了更多免费内容</string>
    <string name="add_book_hint">添加您喜欢的小说</string>
    <string name="add_book_store">加书架</string>
    <string name="add_bookstore">加入书架</string>
    <string name="add_num">增加名额</string>
    <string name="add_to_book_store">加入书架</string>
    <string name="add_typeface">导入字体</string>
    <string name="ads">广告</string>
    <string name="ads_close">关闭广告</string>
    <string name="ads_close_go_confirm">确认关闭</string>
    <string name="ads_close_hint">提示：免费淘小说将赚取的广告费以金币奖励的形式补贴给用户，广告费越多补贴用户的奖励越多。</string>
    <string name="ads_close_keep">保留广告</string>
    <string name="ads_close_title">关闭广告后将无法获得金币奖励。</string>
    <string name="ads_close_title_confirm">关闭广告后【非VIP章节】将无法获得金币奖励，确定关闭吗？</string>
    <string name="aes_seed">!@#$</string>
    <string name="after_login">登录后</string>
    <string name="after_login_privacy">同意“</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">0091F3B85F5EFE3D205BF2F98AB0AF1A1450DB42A33271CEAA45CCAE0EBDC2E20BFF2BDB7C36A7913C35F88673381BEA477B47F6C2F72BDC858C7CC6ED31BB854B1A0A3A8ED7AFBB3C06CDB89BC0E035CB56F37FD2DFA6F8234D46C06DA1709D28</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">4B65CC8DCD52FFC70235BC4BE952E663</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00A58B6B06E42B10E4B25449966970172B4DF1E3D61E77B0325EBBDEF0743A211E</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">007529A40D754326F363FB81A3E9451CAAD2D603A400169AF9F389722FBBF4F35A0764C654ECB9A6C4061CEED1B3E5347E</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">009CBF71820DE85EEE17C043541113CC467DF36A57380B0A59694EFB2B5F2DE629</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">00A9A9E3861DD48BDA5F6169F0C6CE79859B9457CBBB1F9C7A118D526057BE16048158ABEEC428C41EF9F1D0E9F3AF6BD4</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">008DC20638C16DF0730CDF946C5EFDE1BB09662D402241115363B988A9CD0BCA94C51A7F081888FF573565ECF15DD0C8CE</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">0057B0D1A8CFD53128A7229535110941D187399750EB4CB9348255F9C4318C0EB9F9E8C22E3EA1CB64FECB235CE0412E34</string>
    <string name="agc_B9EAB77AB7FDFB9A9577EEAC5B15C13D00CD198883FD8D2BCF6CD048B1DB8EAC">F80855CBC0A186D0362A343D42C50EBA</string>
    <string name="agc_D96112F0F656550C8068DE16CF313478D253DDAF4E18EEE01F6D94CA6DD5013F">774E292154F837021403E73B33AB2201</string>
    <string name="agc_F56D9E20C47154729D3F411FD73FA2BDDF0330EB0A9873ACC352CC371FC5A767">48756B61F94F36593A31435C8F120DFD</string>
    <string name="agree_login">同意并登录</string>
    <string name="agree_to_use">同意并使用</string>
    <string name="album_import">相册导入</string>
    <string name="all_book_comments">更多书评</string>
    <string name="all_books">全部书籍</string>
    <string name="all_comments">看书评</string>
    <string name="already_in">已导入</string>
    <string name="already_in_bookrack">已在书架</string>
    <string name="already_load">已加载</string>
    <string name="already_set">已设置</string>
    <string name="already_used">使用中</string>
    <string name="always_show_virtual_key">始终显示虚拟键</string>
    <string name="always_show_virtual_key_pref_key">always_show_virtual_key_pref_key</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_authority">应用权限申请与使用</string>
    <string name="app_function">功能</string>
    <string name="app_mission_hint">注：需从本界面进入应用，达到指定时长回到本界面才能获得奖励</string>
    <string name="app_name">免费淘小说</string>
    <string name="app_name_bak">免费淘小说</string>
    <string name="app_permission">权限</string>
    <string name="app_privacy">隐私</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_hint">(备份包括书架、归档书籍和网页收藏)</string>
    <string name="archive_save">归档收藏</string>
    <string name="archive_tags">归档标签</string>
    <string name="archive_time">归档时间:</string>
    <string name="asset_statements">[{ \"include\": \"https://app.taoyuewenhua.net/.well-known/assetlinks.json\" }]</string>
    <string name="authentication_required">Authentication required</string>
    <string name="author_books">作者的其他作品</string>
    <string name="author_books_second">本作者的作品</string>
    <string name="auto_add_bookshelf">自动加书架</string>
    <string name="auto_add_bookshelf_pref_key">auto_add_bookshelf_pref_key</string>
    <string name="auto_add_bookshelf_tips">阅读满20分钟自动将书籍加入书架</string>
    <string name="auto_buy_next_chapter">自动购买下一章</string>
    <string name="auto_buy_next_chapter_tips">余额充足后直接购买备份</string>
    <string name="auto_read_quit">退出自动阅读</string>
    <string name="auto_read_video">看视频解锁24小时自动阅读</string>
    <string name="auto_sliding">自动阅读</string>
    <string name="auto_sliding_setting">自动阅读设置</string>
    <string name="background_color">背景颜色</string>
    <string name="background_dark_light">背景深浅</string>
    <string name="background_picture">背景图片</string>
    <string name="backup_empty">备份记录为空</string>
    <string name="backup_local">书架备份</string>
    <string name="backup_local_hint">设置本地书架备份，防止记录丢失</string>
    <string name="banner_app_name">jad_yun_banner</string>
    <string name="base_function_dialog">开启基本功能模式将无法使用APP完整功能，确认开启吗？</string>
    <string name="base_function_guide_1">为向用户提供注册/登录、个性化推荐、活动参与等多样的服务，我们会根据用户使用服务时收到的告知或作出的授权、用户服务协议及隐私政策约定、法律法规的相关规定收集并使用用户的个人信息。</string>
    <string name="base_function_guide_2">如果您仅希望使用App为您提供基本功能，可开启基本功能模式。开启方式：点击底部基本功能按钮，退出APP，重新打开即可进入基本功能模式。</string>
    <string name="base_function_guide_3">如您开启基本功能模式，APP将不会收集您的个人信息。在基本功能模式下，您可以使用APP的基本功能，如书城浏览、书籍详情，但您不能使用注册/登录、内容推荐，您可以在退出基本功能模式后继续使用APP的完整服务。</string>
    <string name="base_function_mode">基本功能模式</string>
    <string name="base_function_to_normal">切换完整版，阅读更多书籍</string>
    <string name="base_function_to_normal_guide">完整版才能使用阅读功能，是否切换到完整版？</string>
    <string name="batch_classification">批量分类中</string>
    <string name="batch_delete">管理</string>
    <string name="batch_operation">批量操作中</string>
    <string name="batch_process">批量管理</string>
    <string name="bd_categories">书城分类</string>
    <string name="bind_inviter">新人拜师</string>
    <string name="bind_inviter_success">恭喜您已拜师成功</string>
    <string name="bind_wechat">绑定微信</string>
    <string name="book_store">书架</string>
    <string name="bookshelf_header_failed">检查失败</string>
    <string name="bookshelf_header_finish">检查完成</string>
    <string name="bookshelf_header_pulling">下拉检查更新</string>
    <string name="bookshelf_header_refreshing">正在检查更新…</string>
    <string name="bookshelf_header_release">释放立即检查</string>
    <string name="bookshelf_header_update">上次检查 M-d HH:mm</string>
    <string name="bookstores">书城</string>
    <string name="cancel_privacy">撤销隐私授权</string>
    <string name="civilization_pledge">青少年文明公约</string>
    <string name="classification">分类</string>
    <string name="earn_money">赚钱</string>
    <string name="get_invite_code">获取邀请码</string>
    <string name="get_permission_info">获取个人信息</string>
    <string name="go_to_setting">去设置</string>
    <string name="input_invite_code">填写邀请码</string>
    <string name="input_invite_code_for_coins">输入邀请码，领取拜师奖励</string>
    <string name="mine">我的</string>
    <string name="my_invite_code_desc">我的邀请码</string>
    <string name="open_teenager">开启青少年模式</string>
    <string name="privacy_ad_hint">关闭后，您看到的广告数量不会减少，但是广告相关度会降低。</string>
    <string name="privacy_hint">根据您的浏览记录、浏览偏好等特征为您提供个性化推荐内容。关闭后您将无法收到个性化推荐内容（书城-猜你喜欢和书城-推荐-为你推荐功能将会停止服务）。</string>
    <string name="read_phone_state">读取电话状态(设备IMSI/IMEI号)</string>
    <string name="read_phone_state_reason">提升信息推送的相关度和确定安全事件的准确度</string>
    <string name="send_ad_info">个性化书籍推荐</string>
    <string name="send_book_info">个性化广告推荐</string>
    <string name="storage_info">存储空间信息</string>
    <string name="storage_info_reason">用于小说内容存储、读取和导入TXT，关闭后小说内容将占用内存空间。</string>
    <string name="submit_invite_code">提交邀请码</string>
    <string name="teenager_desc">在青少年模式中，我们精选了一批适合青少年阅读的内容，但在此模式下无法进行金币领取、提现、开通会员等操作，且需要监护人输入密码，才能使用。</string>
    <string name="teenager_privacy_agree">已阅读并同意</string>
    <string name="teenager_protect_guide">儿童个人信息保护指引</string>
    <string name="teenager_title">青少年模式介绍</string>
    <string name="teenager_usage">使用方法：</string>
    <string name="teenager_usage_desc">开启青少年模式，需要先设置独立四位密码，请牢记您的密码，关闭此模式时需要输入密码。</string>
</resources>