<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/main_tab_icon_bookrack_day"
        android:id="@+id/tab1"
        android:title="@string/book_store"/>
    <item
        android:icon="@drawable/main_tab_icon_bookstore_day"
        android:id="@+id/tab2"
        android:title="@string/bookstores"/>
    <item
        android:icon="@drawable/main_tab_icon_navigation_day"
        android:id="@+id/tab3"
        android:title="@string/classification"/>
    <item
        android:icon="@drawable/main_tab_icon_mission_day"
        android:id="@+id/tab4"
        android:title="@string/earn_money"/>
    <item
        android:icon="@drawable/main_tab_icon_account_day"
        android:id="@+id/tab5"
        android:title="@string/mine"/>
</menu>
