<?xml version="1.0" encoding="utf-8"?>
<com.martian.libmars.ui.theme.ThemeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ViewStub
        android:id="@+id/book_shelf_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ViewStub
        android:id="@+id/book_shelf_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:srlEnableLoadMore="false"
        app:srlEnableRefresh="true">
        <com.martian.mibook.mvvm.widget.MiClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headerBackgroundColorType="1"
            app:headerTextFailed="@string/bookshelf_header_failed"
            app:headerTextFinish="@string/bookshelf_header_finish"
            app:headerTextPulling="@string/bookshelf_header_pulling"
            app:headerTextRefreshing="@string/bookshelf_header_refreshing"
            app:headerTextRelease="@string/bookshelf_header_release"
            app:headerTextUpdate="@string/bookshelf_header_update"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_book_shelf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</com.martian.libmars.ui.theme.ThemeLinearLayout>
