<?xml version="1.0" encoding="utf-8"?>
<com.martian.libmars.ui.theme.ThemeRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="113dp"
                android:layout_height="113dp"
                android:layout_marginTop="69dp"
                android:src="@drawable/icon_teenager_guide_png"/>
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/teenager_title"/>
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/teenager_desc"
                app:textColorType="2"/>
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/teenager_usage"/>
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/teenager_usage_desc"
                app:textColorType="2"/>
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@+id/privacy_intimate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/intimate_icon"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/icon_checkin_unselected"
                    android:layout_marginEnd="4dp"/>
                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/day_text_color_thirdly"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teenager_privacy_agree"/>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/day_text_color_thirdly"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/intimate_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/teenager_protect_guide"
                    android:onClick="onProtectGuideClick"/>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/day_text_color_thirdly"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/intimate_civilization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/civilization_pledge"
                    android:onClick="onCivilizationPledgeClick"/>
            </LinearLayout>
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/border_button_round_default"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="48dp"
                android:text="@string/open_teenager"
                android:onClick="onTeenagerOpenClick"
                app:selectableItem="true"
                app:textColorType="-1"/>
        </LinearLayout>
    </ScrollView>
</com.martian.libmars.ui.theme.ThemeRelativeLayout>
