<?xml version="1.0" encoding="utf-8"?>
<com.martian.libmars.ui.theme.ThemeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.martian.libmars.ui.theme.ThemeLinearLayout
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onPhoneStatePermissionClick"
        app:backgroundType="5">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_phone_state"/>
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/read_phone_state_reason"
                app:textColorType="2"/>
        </LinearLayout>
        <com.martian.libmars.ui.theme.ThemeTextView
            android:textSize="14sp"
            android:id="@+id/phone_state_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/go_to_setting"
            app:textColorType="2"/>
        <com.martian.libmars.ui.theme.ThemeImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/loan_more_black"
            app:colorFilterType="4"
            app:enableFilter="true"/>
    </com.martian.libmars.ui.theme.ThemeLinearLayout>
    <com.martian.libmars.ui.theme.ThemeView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        app:viewBackgroundType="1"/>
    <com.martian.libmars.ui.theme.ThemeLinearLayout
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStoragePermissionClick"
        app:backgroundType="5">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_info"/>
            <com.martian.libmars.ui.theme.ThemeTextView
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/storage_info_reason"
                app:textColorType="2"/>
        </LinearLayout>
        <com.martian.libmars.ui.theme.ThemeTextView
            android:textSize="14sp"
            android:id="@+id/storage_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/go_to_setting"
            app:textColorType="2"/>
        <com.martian.libmars.ui.theme.ThemeImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/loan_more_black"
            app:colorFilterType="4"
            app:enableFilter="true"/>
    </com.martian.libmars.ui.theme.ThemeLinearLayout>
    <com.martian.libmars.ui.theme.ThemeView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        app:viewBackgroundType="1"/>
    <com.martian.libmars.ui.theme.MiSwitchButton
        android:textSize="16sp"
        android:textColor="?attr/textColorPrimary"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:id="@+id/send_book_info"
        android:background="@drawable/selectable_background_yellow"
        android:paddingLeft="16dp"
        android:paddingTop="11dp"
        android:paddingRight="16dp"
        android:paddingBottom="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_ad_info"
        android:onClick="onBookInfoClick"/>
    <com.martian.libmars.ui.theme.ThemeTextView
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_hint"
        android:lineSpacingMultiplier="1.2"
        app:textColorType="2"/>
    <com.martian.libmars.ui.theme.ThemeView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        app:viewBackgroundType="1"/>
    <com.martian.libmars.ui.theme.MiSwitchButton
        android:textSize="16sp"
        android:textColor="?attr/textColorPrimary"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:id="@+id/send_ad_info"
        android:background="@drawable/selectable_background_yellow"
        android:paddingLeft="16dp"
        android:paddingTop="11dp"
        android:paddingRight="16dp"
        android:paddingBottom="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_book_info"
        android:onClick="onAdInfoClick"/>
    <com.martian.libmars.ui.theme.ThemeTextView
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_ad_hint"
        android:lineSpacingMultiplier="1.2"
        app:textColorType="2"/>
    <com.martian.libmars.ui.theme.ThemeView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:scaleType="fitXY"
        app:viewBackgroundType="1"/>
    <com.martian.libmars.ui.theme.ThemeLinearLayout
        android:orientation="vertical"
        android:id="@+id/privacy_setting"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onReceivePrivacyClick"
        app:backgroundType="5">
        <com.martian.libmars.ui.theme.ThemeTextView
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_permission_info"/>
    </com.martian.libmars.ui.theme.ThemeLinearLayout>
    <com.martian.libmars.ui.theme.ThemeImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scaleType="fitXY"
        app:colorFilterType="7"
        app:enableFilter="true"/>
    <com.martian.libmars.ui.theme.ThemeLinearLayout
        android:orientation="vertical"
        android:id="@+id/privacy_setting_cancel"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCancelPrivacyClick"
        app:backgroundType="5">
        <com.martian.libmars.ui.theme.ThemeTextView
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_privacy"/>
    </com.martian.libmars.ui.theme.ThemeLinearLayout>
    <com.martian.libmars.ui.theme.ThemeImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scaleType="fitXY"
        app:colorFilterType="7"
        app:enableFilter="true"/>
</com.martian.libmars.ui.theme.ThemeLinearLayout>
