<?xml version="1.0" encoding="utf-8"?>
<com.martian.libmars.ui.theme.ThemeLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/binded_inviter_view"
        android:padding="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.martian.libmars.ui.theme.ThemeTextView
            android:id="@+id/invite_bind_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_inviter_success"
            android:layout_centerInParent="true"
            app:textColorType="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/martian_bg_friend_left"
            android:layout_toLeftOf="@+id/invite_bind_hint"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@drawable/martian_bg_friend_right"
            android:layout_toRightOf="@+id/invite_bind_hint"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/bind_inviter_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <com.martian.libmars.ui.theme.ThemeTextView
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/input_invite_code_for_coins"/>
        <LinearLayout
            android:background="@drawable/login_input_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <EditText
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:id="@+id/invite_code"
                android:background="@color/transparent"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_invite_code"
                android:inputType="none"
                android:textCursorDrawable="@null"/>
        </LinearLayout>
        <com.martian.libmars.ui.theme.ThemeTextView
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/border_button_round_default"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/submit_invite_code"
            android:onClick="OnBindInviterClick"
            app:selectableItem="true"
            app:textColorType="-1"/>
        <com.martian.libmars.ui.theme.ThemeTextView
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/get_invite_code"
            android:onClick="OnGetInviterClick"
            app:selectableItem="true"
            app:textColorType="5"/>
    </LinearLayout>
    <com.martian.libmars.ui.theme.ThemeTextView
        android:textSize="14sp"
        android:gravity="center"
        android:id="@+id/my_invite_code"
        android:padding="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_invite_code_desc"
        app:textColorType="1"/>
</com.martian.libmars.ui.theme.ThemeLinearLayout>
